# travel

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: cli.py  main.py
app/agents/: planner.py  price_compare.py
app/api/: __init__.py  auth.py  auth_wechat.py  booking.py  chat.py  routes.py  sessions.py  voice_booking.py  websocket.py
app/core/: auth.py  config.py  currency.py  database.py  order_store.py  parser.py  rate_limiter.py  repository.py  retry.py
app/domains/auth/: api.py
app/domains/booking/: api.py
app/domains/chat/: api.py
app/domains/planning/: agent.py  api.py  llm.py  service.py  utils.py
app/models/: order.py  schemas.py
app/services/: booking.py  order_monitor.py  payment.py  voice_agent.py
scripts/: poc_test.py
tests/: test_auth_rate_limit.py  test_booking.py  test_chat.py  test_currency.py  test_parser.py  test_planning.py  test_rate_limiter.py  test_schemas.py  test_wechat_auth.py
web/: CLAUDE.md  package-lock.json  package.json  vitest.config.ts
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/chat/: layout.tsx  page.tsx
web/src/app/compare/: layout.tsx  page.tsx
web/src/app/login/: page.tsx
web/src/app/plan/: page.tsx
web/src/components/: auth-guard.tsx  booking-drawer.tsx  chat-sidebar.tsx  drawer.tsx  header.tsx  itinerary-card.tsx  itinerary-view.tsx  notification-banner.tsx  source-drawer.tsx  voice-booking-drawer.tsx  voice-status.tsx
web/src/hooks/: use-websocket.ts
web/src/lib/: auth.ts
web/src/types/: index.ts
(+27 files in other folders)
